Count issue fixed

--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -660,7 +660,7 @@
             <!--//Profile1-->
           </div>
           <!--PrevNext-->
-          <div class="matchCount" style="top:-45px;">{{page+1}}/{{matchingUsers?.meta?.count}}</div>
+          <div class="matchCount" style="top:-45px;">{{page}}/{{matchingUsers?.meta?.count}}</div>
           <a (click)="onChangeUser('prev')" class="carousel-control-prev" href="#carouselProfile" role="button"
             data-slide="prev" style="top:-45px;">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
