--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -41,7 +41,8 @@
           <li class="nav-item">
             <a (click)="onTabChange({tabName: 'matches', tabNumber: 2})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 2}" class="nav-link" href="javascript:;">{{"dashboard.matches" | translate}}
-              <small>(39)</small></a>
+              <!-- <small>(39)</small> -->
+            </a>
           </li>
           <!-- <li class="nav-item">
 						<a (click)="onTabChange({tabName: 'visaSponsored', tabNumber: 3})"
@@ -52,7 +53,8 @@
             <a (click)="onTabChange({tabName: 'applied', tabNumber: 4})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 4}" class="nav-link" href="javascript:;">
               {{"dashboard.applied" | translate}}
-              <small>(12)</small></a>
+              <!-- <small>(12)</small> -->
+            </a>
           </li>
           <!-- <li class="nav-item">
             <a (click)="onTabChange({tabName: 'shortlisted', tabNumber: 5})"
