--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -3,7 +3,7 @@
     <div class="row mb-5">
       <div class="col-lg-8 col-md-7">
         <div class="row">
-          <div class="col-lg-5">
+          <!-- <div class="col-lg-5">
             <form class="form-inline">
               <div class="form-group">
               <label>{{"dashboard.sortBy" | translate}} : </label>
@@ -17,7 +17,6 @@
             </form>
           </div>
           <div class="col-lg-12 mt-3">
-            <!--Find Results Tags-->
             <div class="clearfix">
               <div class="alert alert-find alert-dismissible" role="alert">
                 <a href="#" class="text-dark"> India (15) </a>
@@ -32,8 +31,7 @@
                 <a href="#" class="text-dark"> Singapore (5) </a>
               </div>
             </div>
-            <!--//Search Results Tags-->
-          </div>
+          </div> -->
         </div>
         <ng-container *ngIf="postedJobs.length > 0; else elseTemplate">
           <div class="row mt-4 mb-4" *ngFor="let item of postedJobs; let i=index">
