--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -6,7 +6,10 @@
           <i class="fas fa-arrow-left"></i>
         </button>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">{{"dashboard.postJobDetailView" | translate}}</li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Back To Jobs
+            <!-- {{"dashboard.postJobDetailView" | translate}} -->
+          </li>
         </ol>
       </div>
       <div class="col-lg-7 clearfix">
@@ -61,14 +64,19 @@
         <app-shared-job-profile [jobInfo]="postedJobsDetails" [fieldsExclude]="{salary: true, visa_sponsorship: true, end_to_end_implementation: true}">
         </app-shared-job-profile>
       </div>
-      <div class="col-lg-4" *ngIf="postedJobs?.length && !postedJobs?.includes(postedJobsDetails?.id)">
+      <div class="col-lg-4" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobs?.length && !postedJobs?.includes(postedJobsDetails?.id)">
         <div class="title">
-          <h2>{{"dashboard.yourPostJobs" | translate }}</h2>
+          <h2>
+            Your Other Posted Jobs
+            <!-- {{"dashboard.yourPostJobs" | translate }} -->
+          </h2>
         </div>
         <div class="sidebar-widget text-left">
           <div class="card" *ngFor="let item of postedJobs; let i=index">
             <div class="card-body p-3" *ngIf="item?.id != postedJobsDetails?.id">
-              <h5 class="text-capitalize">{{item?.title}}</h5>
+              <a href="javascript:;" [routerLink]="['/employer/job-detail-view', item?.id]">
+                <h5 class="text-capitalize">{{item?.title}}</h5>
+              </a>
               <!-- <h6 class="mb-2">Matchings - 23</h6>
               <h6>Applicants - 14</h6> -->
             </div>
