--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -67,7 +67,7 @@
       <div class="col-lg-4" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobs?.length && !postedJobs?.includes(postedJobsDetails?.id)">
         <div class="title">
           <h2>
-            Your Other Posted Jobs
+            Other Post
             <!-- {{"dashboard.yourPostJobs" | translate }} -->
           </h2>
         </div>
