--- a/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
@@ -65,9 +65,9 @@
           <li class="nav-employerDetails" role="presentation">
             <a class="nav-link" id="jobs-tab" data-toggle="tab" href="#jobs" role="tab" aria-controls="jobs" aria-selected="false">Open Jobs</a>
           </li>
-          <li class="nav-employerDetails" role="presentation">
+          <!-- <li class="nav-employerDetails" role="presentation">
             <a class="nav-link" id="employees-tab" data-toggle="tab" href="#employees" role="tab" aria-controls="employees" aria-selected="false">Employees</a>
-          </li>
+          </li> -->
         </ul>
         <div class="tab-content" id="myTabContent">
           <!--About Company-->
