--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -87,7 +87,7 @@
             <li class="submenu"> <a [routerLink]="['/employer/dashboard']" class="dropdown-item" href="javascript:;">Dashboard</a></li>
             <li class="submenu"> <a [routerLink]="['/employer/profile']" class="dropdown-item" href="javascript:;">Profile</a></li>
             <li class="submenu"> <a [routerLink]="['/notification']" class="dropdown-item" href="javascript:;">Notification</a></li>
-            <li class="submenu"> <a [routerLink]="['/employer/setting']" class="dropdown-item" href="javascript:;">Settings</a></li>
+            <!-- <li class="submenu"> <a [routerLink]="['/employer/setting']" class="dropdown-item" href="javascript:;">Settings</a></li> -->
             <li class="submenu"> <a (click)="logout()" class="dropdown-item" href="javascript:;">Logout</a></li>
           </ul>
           </li>
