--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -166,7 +166,7 @@
       <div class="col-lg-4 col-md-5">
         <div class="title">
           <h2>Filter
-            <button (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
+            <button *ngIf="customObject?.keys(utilsHelperService.clean(tempQueryParams))?.length > 2" (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
               <i class="fa fa-times" aria-hidden="true"></i>Clear
             </button>
           </h2>
