--- a/frontend/src/app/modules/features/employer/employer-dashboard/employer-dashboard.component.html
+++ b/frontend/src/app/modules/features/employer/employer-dashboard/employer-dashboard.component.html
@@ -7,7 +7,7 @@
 						<li class="breadcrumb-item active" aria-current="page">{{"dashboard.dashboard" | translate}}</li>
 					</ol>
 				</div>
-				<div class="col-lg-7 clearfix">
+				<div class="col-lg-7 clearfix d-none">
 					<form class="form-inline float-right">
 						<div class="input-with-icon mr-sm-2">
 						  <input type="text" class="form-control" name="job-title" placeholder="Job Title / SAP Module" style="height: 36px;">
