--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -86,50 +86,25 @@
       </div>
       <div class="col-lg-4 col-md-5">
         <div class="title">
-          <h2>{{"dashboard.filter" | translate}}</h2>
+          <h2>Filter
+            <button *ngIf="customObject?.keys(utilsHelperService.clean(tempQueryParams))?.length > 2" (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
+              <i class="fa fa-times" aria-hidden="true"></i>Clear
+            </button>
+          </h2>
+
         </div>
         <div class="sidebar-widget text-left">
         <div class=" my-scrollbar">
           <div class="card">
             <div class="card-header" data-toggle="collapse" data-target="#collapseExperience" aria-expanded="false" aria-controls="collapseExperience">
-              {{"postYourResume.experience" | translate}} <i class="fas fa-angle-down float-right pt-1"></i>
+              Experience <i class="fas fa-angle-down float-right pt-1"></i>
             </div>
             <div class="card-body collapse multi-collapse show" id="collapseExperience">
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">
+                <li class="list-group-item" *ngFor="let item of experienceFilter; let i=index">
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                    <label class="custom-control-label" for="customCheck1">Freshers </label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck2">
-                    <label class="custom-control-label" for="customCheck2">1 - 3 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck3">
-                    <label class="custom-control-label" for="customCheck3">3 - 5 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck4">
-                    <label class="custom-control-label" for="customCheck4">5 - 7 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck5">
-                    <label class="custom-control-label" for="customCheck5">7 - 10 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck6">
-                    <label class="custom-control-label" for="customCheck6">10 Years &amp; above</label>
+                    <input type="checkbox" [checked]="onCheckExpDefault(item)" (change)="onFiltertByExperience(item)" class="custom-control-input" id="experienceCheck_{{i}}">
+                    <label class="custom-control-label" for="experienceCheck_{{i}}">{{item?.text}} </label>
                   </div>
                 </li>
               </ul>
@@ -137,128 +112,36 @@
           </div>
           <div class="card mt-4">
             <div class="card-header" data-toggle="collapse" data-target="#collapseJoptype" aria-expanded="false" aria-controls="collapseJoptype">
-              {{"postJob.jobType" | translate}}  <i class="fas fa-angle-down float-right pt-1"></i>
+              Job Type  <i class="fas fa-angle-down float-right pt-1"></i>
             </div>
-            <div class="card-body collapse multi-collapse" id="collapseJoptype">
+            <div [ngClass]="{'show': queryParams?.type}" class="card-body collapse multi-collapse" id="collapseJoptype">
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">
+                <li class="list-group-item" *ngFor="let item of sharedService.onGetJobType(); let i=index">
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck7">
-                    <label class="custom-control-label" for="customCheck7">Remote </label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck8">
-                    <label class="custom-control-label" for="customCheck8">Onsite</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck9">
-                    <label class="custom-control-label" for="customCheck9">Full Time</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck10">
-                    <label class="custom-control-label" for="customCheck10">Part Time</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck11">
-                    <label class="custom-control-label" for="customCheck11">Contract</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck12">
-                    <label class="custom-control-label" for="customCheck12">Temporary</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck13">
-                    <label class="custom-control-label" for="customCheck13">Permanent</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck14">
-                    <label class="custom-control-label" for="customCheck14">Freelancer</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck15">
-                    <label class="custom-control-label" for="customCheck15">Internship</label>
+                    <input [value]="i" [checked]="queryParams?.type?.includes(i)" (change)="onFiltertByJobType('type', i)" type="checkbox" class="custom-control-input" id="customCheck_{{i}}">
+                    <label class="custom-control-label" for="customCheck_{{i}}">{{item}} </label>
                   </div>
                 </li>
               </ul>
             </div>
           </div>
-          <!-- <div class="card mt-4">							 -->
-            <!-- <div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary"> -->
-              <!-- Salary  <i class="fas fa-angle-down float-right pt-1"></i> -->
-            <!-- </div> -->
-            <!-- <div class="card-body p-3 collapse multi-collapse" id="collapseSalary">								 -->
-              <!-- <div class="salary-slider-range clearfix"> -->
-                <!-- <input class="min_salary" type="text">  -->
-                <!-- <input class="max_salary" type="text">	 -->
-              <!-- </div>						 -->
-              <!-- <div id="salary-slider-range" name="rangeInput"></div> -->
-            <!-- </div> -->
-          <!-- </div>		 -->
+          <div class="card mt-4">
+            <div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary">
+              Salary  <i class="fas fa-angle-down float-right pt-1"></i>
+            </div>
+            <div [ngClass]="{'show': (queryParams?.min_salary && queryParams?.max_salary)}" class="card-body p-3 collapse multi-collapse" id="collapseSalary">
+              <ngx-slider (userChangeEnd)="onFilterWithSalary($event)" [(value)]="minSalary" [(highValue)]="maxSalary" [options]="options"></ngx-slider>
+            </div>
+          </div>
           <div class="card mt-4">
             <div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
-              SAP {{"postJob.skills" | translate}}  <i class="fas fa-angle-down float-right pt-1"></i>
+              SAP Skills  <i class="fas fa-angle-down float-right pt-1"></i>
             </div>
-            <div class="card-body p-3 collapse multi-collapse" id="collapseSkills">
+            <div [ngClass]="{'show': skills?.length}" class="card-body p-3 collapse multi-collapse" id="collapseSkills">
               <div class="skill-select">
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input  mb-0" type="checkbox" id="Check1" name="example1">
-                  <label class="custom-control-label mb-0" for="Check1">SAP-FI </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input  mb-0" type="checkbox" id="Check2" name="example1">
-                  <label class="custom-control-label  mb-0" for="Check2">SAP-FSCM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input  mb-0" type="checkbox" id="Check3" name="example1">
-                  <label class="custom-control-label  mb-0" for="Check3">SAP-CO </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check4" name="example1">
-                  <label class="custom-control-label mb-0" for="Check4">SAP-MM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check5" name="example1">
-                  <label class="custom-control-label mb-0" for="Check5">SAP-SD </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check6" name="example1">
-                  <label class="custom-control-label mb-0" for="Check6">SAP-LE </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check7" name="example1">
-                  <label class="custom-control-label mb-0" for="Check7">SAP-PP</label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check8" name="example1">
-                  <label class="custom-control-label mb-0" for="Check8">SAP-QM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check9" name="example1">
-                  <label class="custom-control-label mb-0" for="Check9">SAP-PM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check9" name="example1">
-                  <label class="custom-control-label mb-0" for="Check9">SAP-PS </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check9" name="example1">
-                  <label class="custom-control-label mb-0" for="Check9">SAP-HR </label>
+                <div class="custom-control custom-checkbox mb-2" *ngFor="let item of skillItems?.items; let i=index">
+                  <input [checked]="skills?.includes(customParseInt(item?.id))" (change)="onFiltertBySkill(item)" class="custom-control-input  mb-0" type="checkbox" id="Check_{{i}}" name="example1">
+                  <label class="custom-control-label  mb-0" for="Check_{{i}}">{{utilsHelperService.onSplitTag(item?.tag)}} </label>
                 </div>
               </div>
             </div>
