--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -78,7 +78,7 @@
            <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
            <span class="d-flex align-items-center">
-            <ngx-avatar class="float-left mr-2" size="35" name="{{currentEmployerDetails?.first_name + ' ' + currentEmployerDetails?.last_name}}"></ngx-avatar>
+            <ngx-avatar *ngIf="currentEmployerDetails?.first_name || currentEmployerDetails?.last_name" class="float-left mr-2" size="35" name="{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}"></ngx-avatar>
             <!-- <span class="letter-custom-abb">{{onChangeNameAbb(currentEmployerDetails?.first_name + ' ' + currentEmployerDetails?.last_name)}}</span> -->
             <span class="text-capitalize">{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}</span>
           </span>
