--- a/frontend/src/app/modules/features/common/home/home.component.html
+++ b/frontend/src/app/modules/features/common/home/home.component.html
@@ -29,32 +29,6 @@
       {{utilsHelperService.onSplitTag(item.tag)}}
     </ng-template>
   </ng-select>
-            <!-- <div class="input-with-icon">
-              <input (click)="isMenuOpen = true" formControlName="search" #searchJob type="text" class="form-control"
-                placeholder="Job Title / SAP Module" value="">
-              <i class="fas fa-briefcase"></i>
-            </div>
-              <ul *ngIf="isMenuOpen" (outsideClick)="isMenuOpen = false" outsideClick id="myUL">
-                <ng-container *ngIf="filteredValues?.length; else elseTemplate">
-                  <ng-container *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1); else elseTemplate">
-                    <li *ngFor="let item of filteredValues; let i=index">
-                      <a (keyup.enter)="onSelectSkill(item)" (click)="onSelectSkill(item)" href="javascript:;">{{item?.tag}}</a>
-                    </li>
-                  </ng-container>
-                  <ng-template #elseTemplate>
-                    <li *ngFor="let item of filteredValues; let i=index">
-                      <a (keyup.enter)="onSelectSkill(item)" (click)="onSelectSkill(item)" href="javascript:;">{{item?.title}}</a>
-                    </li>
-                  </ng-template>
-
-                </ng-container>
-                <ng-template #elseTemplate>
-                  <li *ngIf="(!searchForm?.errors?.atLeastOne && utilsHelperService.isEmptyObj(selectedSkillItem))">
-                    <a href="javascript:;">No data found</a>
-                  </li>
-                </ng-template>
-
-              </ul> -->
           </div>
           <div class="col-lg-6 col-md-6 mb-3">
             <div class="input-with-icon">
@@ -76,10 +50,10 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h5 class="font-weight-bold ">
-            <a class="text-dark" href="#">USA <span class="mx-2">|</span></a>
-            <a class="text-dark" href="#">Europe <span class="mx-2">|</span></a>
-            <a class="text-dark" href="#">Asia Pacific <span class="mx-2">|</span></a>
-            <a class="text-dark" href="#">South America </a>
+            <a class="text-dark" href="javascript:;">USA <span class="mx-2">|</span></a>
+            <a class="text-dark" href="javascript:;">Europe <span class="mx-2">|</span></a>
+            <a class="text-dark" href="javascript:;">Asia Pacific <span class="mx-2">|</span></a>
+            <a class="text-dark" href="javascript:;">South America </a>
           </h5>
         </div>
       </div>
@@ -104,7 +78,7 @@
 </section>
 <!-- //Banner Section -->
 <!-- Category Section -->
-<section class="job-category">
+<section class="job-category d-none">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -114,19 +88,19 @@
 
     <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-6">
-        <a href="#" class="job-category-box">
+        <a href="javascript:;" class="job-category-box">
           <!-- <i class="flaticon-accounting"></i> -->
           <h5>India <br>(60)</h5>
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
-        <a href="#" class="job-category-box">
+        <a href="javascript:;" class="job-category-box">
           <!-- <i class="flaticon-accounting"></i> -->
           <h5>USA <br>(40)</h5>
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
-        <a href="#" class="job-category-box">
+        <a href="javascript:;" class="job-category-box">
           <!-- <i class="flaticon-accounting"></i> -->
           <h5>Canada <br>(20)</h5>
         </a>
@@ -135,3 +109,200 @@
   </div>
 </section>
 <!-- //Category Section -->
+
+ <!-- Company Section -->
+ <section class="top-companies">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title">
+          <h1>Top Company Registered</h1>
+          <span class="section-title-bg">Employer </span>
+          <h5>Some of the companies we've helped recruit excellent applicants over the years.</h5>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <owl-carousel-o [options]="customOptions">
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer1.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer2.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer3.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer4.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer5.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer6.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer7.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer8.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer9.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer10.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer11.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+          <ng-template carouselSlide>
+            <a href="javascript:;"><img src="assets/images/employer/employer12.png" class="img-fluid mx-auto"/></a>
+          </ng-template>
+        </owl-carousel-o>
+      </div>
+    </div>
+  </div>
+  </section>
+  <!-- //Company Section -->
+
+
+  <!-- SAPW Info Section -->
+<section class="sapw-info">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="heading">
+          <h5>Recruitment Technology</h5>
+          <h1>Solving Recruitment Using Technology</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique euismod lorem, a consequat orci consequat.</p>
+        </div>
+        <div class="mt-5 d-flex">
+          <div class="card mr-3">
+            <div class="media">
+              <img src="assets/images/sapw-info-icon1.png" class="mr-3" >
+              <div class="media-body">
+              <h3 class="mt-0">Tech Heading One</h3>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.</p>  </div>
+            </div>
+          </div>
+          <div class="card ml-2">
+            <div class="media">
+              <img src="assets/images/sapw-info-icon2.png" class="mr-3" >
+              <div class="media-body">
+              <h3 class="mt-0">Tech Heading Two</h3>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus Cras purus odio.</p>  </div>
+            </div>
+          </div>
+        </div>
+        <div class="mt-4 d-flex">
+          <div class="card mr-3">
+            <div class="media">
+              <img src="assets/images/sapw-info-icon3.png" class="mr-3" >
+              <div class="media-body">
+              <h3 class="mt-0">Tech Heading Three</h3>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.</p>  </div>
+            </div>
+          </div>
+          <div class="card  ml-2">
+            <div class="media">
+              <img src="assets/images/sapw-info-icon4.png" class="mr-3" >
+              <div class="media-body">
+              <h3 class="mt-0">Tech Heading Four</h3>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus Cras purus odio.</p>  </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+  <!-- //SAPW Info Section -->
+
+  <!-- Video Info Section -->
+<section class="video-info">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title">
+          <h1>Modern Day Staffing Company</h1>
+          <span class="section-title-bg">SAP world </span>
+          <h5>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan.</h5>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 pr-5">
+        <div class="video-sec">
+          <video width="100%" controls>
+            <source src="assets/images/employer-video.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="heading">
+          <h4>Find the Employees</h4>
+          <h2>Hire Your Next Candidate On Eazy Recruitz</h2>
+        </div>
+        <p class="mt-3">Sed et condimentum quam. Nunc dictum erat ut ante aliquam porttitor. Donec diam eros, bibendum et scelerisque egestas, aliquet ut nulla.</p>
+      </div>
+      <div class="col-lg-6 pl-5">
+        <div class="video-sec">
+          <video width="100%" controls>
+            <source src="assets/images/jobseeker-video.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="heading">
+          <h4>Find Your Right Place</h4>
+          <h2>Explore Your Career Path With Eazy Recruitz</h2>
+        </div>
+        <p class="mt-3">Fusce pretium, dui placerat laoreet consectetur, nibh diam accumsan enim, sed fringilla turpis quam quis ex. Mauris a rhoncus tortor, a cursus urna.</p>
+      </div>
+    </div>
+  </div>
+  </section>
+  <!-- //Video Info Section -->
+
+
+  <!-- SAPW Features Section -->
+<section class="sapw-features">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title">
+          <h1>Awesome Features</h1>
+          <span class="section-title-bg">SAP world </span>
+          <h5>Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit, nec malesuada ligula orci et metus.</h5>
+        </div>
+      </div>
+    </div>
+    <div class="row my-4">
+      <div class="col-lg-7 pr-5">
+        <h3>First Title </h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit.</p>
+
+        <p>Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit, nec malesuada ligula orci et metus. Fusce pretium, dui placerat laoreet consectetur, nibh diam accumsan enim, sed fringilla turpis quam quis.</p>
+
+        <a class="text-green font-weight-bold" href="javascript:;">Read More</a>
+      </div>
+      <div class="col-lg-5">
+        <img src="assets/images/website-screen1.png" class="img-fluid">
+      </div>
+    </div>
+    <div class="row my-5">
+      <div class="col-lg-5">
+        <img src="assets/images/website-screen2.png" class="img-fluid">
+      </div>
+      <div class="col-lg-7 pl-5">
+        <h3>Second Title </h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit.</p>
+
+        <p>Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit, nec malesuada ligula orci et metus. Fusce pretium, dui placerat laoreet consectetur, nibh diam accumsan enim, sed fringilla turpis quam quis.</p>
+
+        <a class="text-green font-weight-bold" href="javascript:;">Read More</a>
+      </div>
+    </div>
+  </div>
+</section>
+  <!-- //SAPW Features Section -->
