--- a/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
@@ -89,7 +89,7 @@
               <ng-container *ngIf="postedJobs.length; else elseTemplate">
                 <div class="col-lg-6" *ngFor="let item of postedJobs; let i=index">
                   <div class="company-jbcard">
-                    <h4><a [routerLink]="['/employer/job-detail-view', item?.id]" href="javascript:;">{{item?.title}}</a></h4>
+                    <h4 class="text-capitalize"><a [routerLink]="['/employer/job-detail-view', item?.id]" href="javascript:;">{{item?.title}}</a></h4>
                     <h5 class="text-capitalize">
                       {{item?.city ? item?.city : ''}}
                       {{item?.state ? ', ' + item?.state : ''}}
