--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -6,8 +6,8 @@
     <ul class="list-group">
       <li class=" list-group-item text-capitalize">{{"dashboard.totalYearsOfExp" | translate }}</li>
       <li class=" list-group-item text-capitalize">{{"dashboard.totalSapExp" | translate }}</li>
-      <li class=" list-group-item text-capitalize">{{"postJob.domainExperience" | translate }}</li>
-      <li class=" list-group-item text-capitalize">{{"postJob.handsOnWith" | translate }}</li>
+      <li class=" list-group-item text-capitalize">{{"dashboard.domainsWorked" | translate }}</li>
+      <li class=" list-group-item text-capitalize">{{"postJob.handsOnExp" | translate }}</li>
     </ul>
   </div>
   <div class="col-lg-8 info">
